--- a/HotelManagement/Views/Pages/RegistrationPage.xaml
+++ b/HotelManagement/Views/Pages/RegistrationPage.xaml
@@ -1,103 +1,125 @@
-﻿<Page x:Class="HotelManagement.Pages.RegistrationPage"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HotelManagement"
-        mc:Ignorable="d"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="{DynamicResource MaterialDesignLightBackground}"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        >
-
+﻿<Page x:Class="HotelManagement.Views.Pages.RegistrationPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:HotelManagement.Views.Pages"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:viewmodels="clr-namespace:HotelManagement.ViewModels"
+     xmlns:Converter="clr-namespace:HotelManagement.Converters"
+      Title="RegistrationPage">
+    <Page.Resources>
+        <Converter:RegistrationDataMultiConverter x:Key="registrationDataMultiConverter" />
+    </Page.Resources>
+    <Page.DataContext>
+        <viewmodels:VMRegistrationPage />
+    </Page.DataContext>
     <Grid>
-        <materialDesign:Card Margin="7" Padding="10">
+        <materialDesign:Card Margin="7">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.62*"></ColumnDefinition>
-                    <ColumnDefinition Width="0.62*"></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="0">ФИО</TextBlock>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="0" Grid.Column="1">Фамилия И.О.</TextBlock>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="1">Дата рождения</TextBlock>
-                <Border BorderBrush="Gray" BorderThickness="0 0 0 1" Grid.Row="1" Grid.ColumnSpan="2"></Border>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="1" Grid.Column="1">08.03.1990</TextBlock>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="2">Паспорт</TextBlock>
-                <TextBox FontSize="17" VerticalAlignment="Center" Style="{DynamicResource MaterialDesignOutlinedTextFieldTextBox}" Grid.Row="2" Grid.Column="1"></TextBox>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="3">Тип комнаты</TextBlock>
-                <ComboBox VerticalAlignment="Center" Style="{DynamicResource MaterialDesignComboBox}" FontSize="17" Grid.Row="3" Grid.Column="1">
-                    <ComboBoxItem IsSelected="True">
-                        <TextBlock >Не выбрано</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock>Люкс</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock>Стандарт</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock>Бюджет</TextBlock>
-                    </ComboBoxItem>
-                </ComboBox>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="4">Номер комнаты</TextBlock>
-                <ComboBox VerticalAlignment="Center" Style="{DynamicResource MaterialDesignComboBox}" FontSize="17" Grid.Row="4" Grid.Column="1">
-                    <ComboBoxItem IsSelected="True">
-                        <TextBlock >Не выбрано</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock>1</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock>2</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <TextBlock>3</TextBlock>
-                    </ComboBoxItem>
-                </ComboBox>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="5">Доп. услуги</TextBlock>
-                <ComboBox VerticalAlignment="Center" Style="{DynamicResource MaterialDesignComboBox}" FontSize="17" Grid.Row="5" Grid.Column="1">
-                    <ComboBoxItem IsSelected="True">
-                        <TextBlock>Нажмите, чтобы выбрать</TextBlock>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <CheckBox>1</CheckBox>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <CheckBox>2</CheckBox>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <CheckBox>3</CheckBox>
-                    </ComboBoxItem>
-                </ComboBox>
-
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="6">Дата начала</TextBlock>
-                <DatePicker VerticalAlignment="Center" Style="{DynamicResource MaterialDesignDatePicker}" Grid.Row="6" Grid.Column="1"></DatePicker>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="7">Дата окончания</TextBlock>
-                <DatePicker VerticalAlignment="Center" Style="{DynamicResource MaterialDesignDatePicker}" Grid.Row="7" Grid.Column="1"></DatePicker>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="8">Стоимость</TextBlock>
-                <TextBlock VerticalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Grid.Row="8" Grid.Column="1">12000 руб.</TextBlock>
-                <Button Grid.Row="9" Grid.Column="0" Margin="0 0 5 0">Отменить</Button>
-                <Button Grid.Row="9" Grid.Column="1" Margin="5 0 0 0">Регистрация</Button>
-                <Image  Margin="5" Source="/Images/Room.jpg" Grid.Column="3" Grid.Row="0" Grid.RowSpan="5"></Image>
-                <Image Margin="5" Source="/Images/View.jpg" Grid.Column="3" Grid.Row="5"  Grid.RowSpan="5"></Image>
+                <Button 
+                    Command="{Binding BackCommand}"
+                    VerticalAlignment="Top" HorizontalAlignment="Left"
+                    Style="{StaticResource MaterialDesignIconButton}"
+                    ToolTip="Назад" Margin="0,0,738,0">
+                    <materialDesign:PackIcon Kind="Close" />
+                </Button>
+                <Button 
+                    Command="{Binding ForwardCommand}"
+                    VerticalAlignment="Top" HorizontalAlignment="Right"
+                    Style="{StaticResource MaterialDesignIconButton}"
+                    ToolTip="Регистрация">
+                    <Button.Content>
+                    <materialDesign:PackIcon Kind="ArrowRight" />
+                    </Button.Content>
+                    <Button.CommandParameter>
+                        <MultiBinding Converter="{StaticResource registrationDataMultiConverter}">
+                            <Binding ElementName="OldPasswordBox"></Binding>
+                            <Binding ElementName="PasswordBox"></Binding>
+                            <Binding ElementName="ConfirmedPasswordBox"></Binding>
+                        </MultiBinding>
+                    </Button.CommandParameter>
+                </Button>
+                <materialDesign:Card Width="300" VerticalAlignment="Center">
+                    <StackPanel>
+                        <TextBox
+                        Text="{Binding guestData.Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Фамилия"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignTextBox}" />
+                        <TextBox
+                        Text="{Binding guestData.GuestName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Имя"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignTextBox}" />
+                        <TextBox
+                        Text="{Binding guestData.Patronymic, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Отчество"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignTextBox}" />
+                        <TextBlock 
+                            Foreground="Gray"
+                            Style="{DynamicResource MaterialDesignTextBlock}"
+                            Margin="5 0 5 -10">День рождения</TextBlock>
+                        <DatePicker
+                        SelectedDate="{Binding guestData.BirthDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="30"
+                        Margin="5"
+                        Style="{DynamicResource MaterialDesignDatePicker}"/>
+                        <TextBox
+                        Text="{Binding guestData.PhoneNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Телефон"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignTextBox}" />
+                        <TextBox
+                        Text="{Binding guestData.Login, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Логин"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignTextBox}" />
+                        <PasswordBox
+                        Name="OldPasswordBox"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Текущий пароль"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignPasswordBox}"
+                        Visibility="Visible"/>
+                        <PasswordBox
+                        Name="PasswordBox"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Пароль"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignPasswordBox}" />
+                        <PasswordBox
+                        Name="ConfirmedPasswordBox"
+                        Height="30"
+                        Margin="5"
+                        materialDesign:HintAssist.Hint="Подтверждение пароля"
+                        materialDesign:TextFieldAssist.HasClearButton="True"
+                        Style="{DynamicResource MaterialDesignPasswordBox}" />
+                        <TextBlock
+                        Height="30" 
+                        Margin="5" 
+                        Style="{DynamicResource MaterialDesignButtonTextBlock}" 
+                        Text="{Binding Error}"
+                        HorizontalAlignment="Center"
+                        FontSize="12"
+                        Foreground="Red"/>
+                    </StackPanel>
+                </materialDesign:Card>
             </Grid>
         </materialDesign:Card>
     </Grid>
