--- a/HotelManagement/Views/Pages/EmployeePage.xaml
+++ b/HotelManagement/Views/Pages/EmployeePage.xaml
@@ -6,63 +6,93 @@
         xmlns:local="clr-namespace:HotelManagement"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
+        xmlns:viewmodels="clr-namespace:HotelManagement.ViewModels"
         Background="{DynamicResource MaterialDesignLightBackground}"
-        FontFamily="{DynamicResource MaterialDesignFont}"
         >
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="0.5*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <TextBox HorizontalAlignment="Stretch" Style="{DynamicResource MaterialDesignOutlinedTextFieldTextBox}" Grid.Column="2" FontSize="12" Height="36" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" BorderBrush="White"></TextBox>
-            <Button Grid.Column="3" Margin="5 0" HorizontalAlignment="Stretch" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Center" BorderBrush="White">
-                Поиск
-            </Button>
-            <!--<Button Grid.Column="2" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" BorderBrush="White">Комнаты</Button>
-            <Button Grid.Column="3" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" BorderBrush="White">Доп. услуги</Button>-->
-        </Grid>
-        <!--<materialDesign:Card Grid.Row="1" Padding="5 4">
-            <Frame Name="employeeTable"></Frame>
-        </materialDesign:Card>-->
 
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
-            </Grid.RowDefinitions>
-            <materialDesign:Card Grid.Row="0" Grid.RowSpan="2" Margin="5 4">
+    <Page.DataContext>
+        <viewmodels:VMEmployee />
+    </Page.DataContext>
+    <Grid>
+        <StackPanel>
+            <Grid Grid.Row="0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <ComboBox Width="150" Margin="10 2" IsEditable="False">
+                            <ComboBoxItem IsSelected="True">
+                                <TextBlock>Текущие заселения</TextBlock>
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                <TextBlock>Предстоящие заселения</TextBlock>
+                            </ComboBoxItem>
+                            <ComboBoxItem>
+                                <TextBlock>Прошедшие заселения</TextBlock>
+                            </ComboBoxItem>
+                        </ComboBox>
+                        <Button 
+                    Height="35" Width="35" 
+                    HorizontalContentAlignment="Center" 
+                    BorderBrush="White"
+                    Margin="5 2"
+                    VerticalAlignment="Top" HorizontalAlignment="Left"
+                    Style="{StaticResource MaterialDesignIconButton}"
+                    ToolTip="Добавить"
+                            Command="{Binding OpenCheckInPageCommand}">
+                            <materialDesign:PackIcon Kind="Plus" />
+                        </Button>
+                        <Button 
+                    Height="35" Width="35" 
+                    HorizontalContentAlignment="Center" 
+                    BorderBrush="White"
+                    Margin="5 2"
+                    VerticalAlignment="Top" HorizontalAlignment="Left"
+                    Style="{StaticResource MaterialDesignIconButton}"
+                    ToolTip="Редактировать">
+                            <materialDesign:PackIcon Kind="Edit" />
+                        </Button>
+                        <Button 
+                    Height="35" Width="35" 
+                    HorizontalContentAlignment="Center" 
+                    BorderBrush="White"
+                    Margin="5 2"
+                    VerticalAlignment="Top" HorizontalAlignment="Left"
+                    Style="{StaticResource MaterialDesignIconButton}"
+                    ToolTip="Удалить">
+                            <materialDesign:PackIcon Kind="Delete" />
+                        </Button>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="1">
+
+                        <TextBox HorizontalAlignment="Stretch" 
+                         Width="150" 
+                         Style="{DynamicResource MaterialDesignTextBox}" 
+                         FontSize="10" 
+                         VerticalAlignment="Center" 
+                         HorizontalContentAlignment="Stretch" 
+                         BorderBrush="White"
+                         materialDesign:HintAssist.Hint="Поиск"
+                                 materialDesign:HintAssist.IsFloating="False"
+                         Margin="2"></TextBox>
+                        <Button 
+                    Height="35" Width="35" 
+                    HorizontalContentAlignment="Center" 
+                    BorderBrush="White"
+                    Margin="5 2"
+                    VerticalAlignment="Top" HorizontalAlignment="Right"
+                    Style="{StaticResource MaterialDesignIconForegroundButton}"
+                    ToolTip="Поиск">
+                            <materialDesign:PackIcon Kind="Search" />
+                        </Button>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+
+            <materialDesign:Card Margin="5 4">
                 <DataGrid>
-                    <DataGrid.ContextMenu>
-                        <ContextMenu Style="{DynamicResource MaterialDesignMenu}">
-                            <MenuItem>
-                                <MenuItem.Header>Добавить</MenuItem.Header>
-                            </MenuItem>
-                            <MenuItem>
-                                <MenuItem.Header>Изменить выделенный элемент</MenuItem.Header>
-                            </MenuItem>
-                            <MenuItem>
-                                <MenuItem.Header>Удалить выделенный элемент</MenuItem.Header>
-                            </MenuItem>
-                            <MenuItem>
-                                <MenuItem.Header>Посмотреть список доп. услуг</MenuItem.Header>
-                            </MenuItem>
-                            <MenuItem>
-                                <MenuItem.Header>Посмотреть/изменить данные гостя</MenuItem.Header>
-                            </MenuItem>
-                        </ContextMenu>
-                    </DataGrid.ContextMenu>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Width="*"></DataGridTextColumn>
                         <DataGridTextColumn Header="Гость" Width="*"></DataGridTextColumn>
@@ -73,21 +103,6 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </materialDesign:Card>
-
-            <!--<materialDesign:Card Grid.Row="1" Margin="5 4" Height="42">
-                <Grid VerticalAlignment="Stretch">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition ></ColumnDefinition>
-                        <ColumnDefinition ></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" BorderBrush="White">Добавить</Button>
-                    <Button Grid.Column="1" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" BorderBrush="White">Изменить</Button>
-                    <Button Grid.Column="2" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" BorderBrush="White">Удалить</Button>
-                    <Button Grid.Column="3" Height="40" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" BorderBrush="White">Посмотреть список услуг</Button>
-                </Grid>
-            </materialDesign:Card>-->
-        </Grid>
+        </StackPanel>
     </Grid>
 </Page>
